# portfolio

./: pyproject.toml
src/portfolio/: __init__.py  authn.py  cli.py  models.py  routes.py  thing.py
src/portfolio/database/: db.py  integretion.py
src/portfolio/features/: authn.py  models.py  routes.py
src/portfolio/templates/: authn.py  index.html  login.html  signup.html
src/portfolio/typer_app/: cli.py  db.py  main.py  table.sql
tests/: Scenario: View current portfolio holding.md  test_nothing.py
