[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cedric Anderson Jr", email = "CTANDERSON2@Anderson.edu" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
portfolio = "portfolio:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203","D212","COM812"]

[tool.mypy]
strict = true

